--- a/src/app/components/nav-bar/nav-bar.component.scss
+++ b/src/app/components/nav-bar/nav-bar.component.scss
@@ -8,14 +8,12 @@
   display: flex;
   align-items: center;
   padding: 0 1rem;
-  background-color: var(--color-light-bg);
-  color: var(--color-light-text);
+  background-color: var(--color-surface);
+  color: var(--color-text);
   transition: var(--theme-transition);
   box-shadow: 0 2px 4px rgba(0, 23, 31, 0.1);
 
   body.dark & {
-    background-color: var(--color-dark-bg);
-    color: var(--color-dark-text);
     box-shadow: 0 2px 4px rgba(255, 255, 255, 0.1);
   }
 
@@ -209,8 +207,8 @@
 }
 
 .mobile-menu {
-  background-color: var(--color-light-bg);
-  color: var(--color-light-text);
+  background-color: var(--color-surface);
+  color: var(--color-text);
   padding: 0 1rem;
   position: absolute;
   top: 56px;
